x.valueOf replacement for better performance and a double null check fix